--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.1",
+    "vite-plugin-oxlint": "^1.3.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -26,7 +27,7 @@
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
     "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.16.0",
+    "oxlint": "^0.16.12",
     "prettier": "3.5.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
